--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
-{"homepage": "https://github.com/kimamovic21/glx-trvl",
+{
+  "homepage": "https://kimamovic21.github.io/glx-trvl",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
